# mcp-repl

./: .gitignore  README.md  pyproject.toml  test_mcp_repl.py
.github/workflows/: databases-example-test.yaml  pypi-publish.yaml
examples/databases/: README.md  config.json  generate_mock_data.py  mysql_mcp.py  postgresql_mcp.py  redis_mcp.py  setup.sh
examples/databases/mcp-server-mysql/: README.md  pyproject.toml
examples/databases/mcp-server-postgresql/: README.md
examples/databases/mcp-server-redis/: pyproject.toml
examples/infra/: README.md  config.json  helm_server.py  k8s_server.py  modal_mcp.py  setup.sh
examples/infra_librechat/: Makefile  README.md  mcp_k8s.py  pyproject.toml
examples/infra_librechat/k8s/: deploy_mcp.py  k8s-error.yaml  k8s-libre.yaml
src/mcp_repl/: llm_client.py  mcp_orchestrator.py  repl.py
test/integration/: conftest.py  test_databases_example.py  test_mcp_orchestrator.py
